--- a/src/pages/indexPage/indexPage.scss
+++ b/src/pages/indexPage/indexPage.scss
@@ -1,5 +1,5 @@
 .indexPage {
-  .right-image{
+  .right-image {
     right: 15px;
     width: 20px;
     height: 20px;
@@ -10,7 +10,7 @@
     box-sizing: content-box;
     z-index: 5;
   }
-  .titleName{
+  .titleName {
     font-family: PingFangSC-Regular;
     font-size: 15px;
     color: #000000;
@@ -18,7 +18,7 @@
     line-height: 28px;
     height: 28px;
   }
-  .titleNum{
+  .titleNum {
     font-family: PingFangSC-Regular;
     font-size: 10px;
     color: #000000;
@@ -209,5 +209,14 @@
     top: 24px;
     right: 0px;
   }
-
+  .view-all-btn {
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+    border-top: 1px solid #EFEFEF;
+    font-size: 15px;
+    color: #888888;
+    text-align: center;
+    line-height: 40px;
+    text-decoration: none;}
 }
