--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -152,6 +152,11 @@
     line-height: 24px;
     margin: 50px auto 0;
   }
-
+  .version{
+    margin-top: 60px;
+    text-align: center;
+    font-size: 14px;
+    color: #888888;
+  }
 }
 
