--- a/src/pages/password/changePassword/changePassword.scss
+++ b/src/pages/password/changePassword/changePassword.scss
@@ -39,6 +39,7 @@
     text-align: center;
     line-height: 44px;
     margin: 0 auto;
+    -webkit-appearance: none
   }
   .passwordNew{
 
@@ -54,6 +55,6 @@
     background: #FFFFFF;
     box-shadow: 0 1px 0 0 #9FB7EE;
     border-radius: 2px;
-
+    -webkit-appearance: none
   }
 }
