--- a/src/theme/app.core.scss
+++ b/src/theme/app.core.scss
@@ -16,7 +16,12 @@
 @import "../pages/myInfo/myInfo";
 
 @import "../pages/myClass/myClass";
+
 @import "../pages/school/school";
+@import "../pages/school/schoolClass/schoolClass";
+@import "../pages/school/schoolDetail/schoolDetail";
+@import "../pages/school/schoolItemList/schoolItemList";
+
 
 
 @import "../pages/tab/tab";
@@ -24,3 +29,6 @@
 @import "../pages/guide/guide";
 
 @import "../pages/password/changePassword/changePassword";
+
+@import "../pages/timeSelect/timeSelect";
+
