--- a/src/pages/school/school.scss
+++ b/src/pages/school/school.scss
@@ -1,3 +1,73 @@
-.school{
+.school {
+  .rowStyle {
+    text-align: center;
+    background: white;
+    height: 44px;
+    line-height: 44px;
+    padding: 0;
+    font-family: PingFangSC-Regular;
+    font-size: 15px;
+    color: #000000;
+    letter-spacing: -0.36px;
+  }
+  .iconStyle {
+    color: #C6C6C6;
+  }
+  .listDesc {
+    height: 35px;
+    line-height: 35px;
+    margin-left: 15px;
+    font-family: PingFangSC-Regular;
+    font-size: 14px;
+    color: #888888;
+    letter-spacing: -0.34px;
+  }
+  .itemStyle {
+    margin-bottom: 16px;
+    border: none;
+    padding-left: 82px;
+    .imgStyle {
+      max-height: 50px !important;
+      max-width: 50px !important;
+    }
+    .rowStyleDetail {
+      padding: 0;
+      height: 30px;
+      .schoolName {
+        font-family: PingFangSC-Regular;
+        font-size: 17px;
+        color: #030303;
+        line-height: 30px;
+        text-align: left;
+      }
+      .schoolTime {
+        text-align: right;
+        font-family: PingFangSC-Light;
+        font-size: 13px;
+        color: #AAAAAA;
+        line-height: 30px;
+      }
+      .personName {
+        font-family: PingFangSC-Light;
+        font-size: 14px;
+        color: #888888;
+        letter-spacing: -0.34px;
+        line-height: 30px;
 
+      }
+      .principal {
+        font-family: PingFangSC-Light;
+        font-size: 14px;
+        color: #888888;
+        line-height: 30px;
+      }
+      .saleName {
+        text-align: right;
+        font-family: PingFangSC-Light;
+        font-size: 14px;
+        color: #888888;
+        line-height: 30px;
+      }
+    }
+  }
 }
