--- a/src/pages/school/school.scss
+++ b/src/pages/school/school.scss
@@ -1,18 +1,6 @@
 .school {
-  .rowStyle {
-    text-align: center;
-    background: white;
-    height: 44px;
-    line-height: 44px;
-    padding: 0;
-    font-family: PingFangSC-Regular;
-    font-size: 15px;
-    color: #000000;
-    letter-spacing: -0.36px;
-  }
-  .iconStyle {
-    color: #C6C6C6;
-  }
+
+
   .listDesc {
     height: 35px;
     line-height: 35px;
@@ -33,6 +21,7 @@
     .rowStyleDetail {
       padding: 0;
       height: 30px;
+      line-height: 30px;
       .schoolName {
         font-family: PingFangSC-Regular;
         font-size: 17px;
@@ -70,4 +59,65 @@
       }
     }
   }
+  .rowStyle {
+    text-align: center;
+    background: white;
+    height: 44px;
+    line-height: 44px;
+    padding: 0;
+    font-family: PingFangSC-Regular;
+    font-size: 15px;
+    color: #000000;
+    letter-spacing: -0.36px;
+    position: absolute;
+    border-top:1px solid #E2DFDF;
+    .iconStyle {
+      color: #C6C6C6;
+    }
+  }
+  .listSelectDetail {
+    max-height: 450px;
+    overflow-y: scroll;
+    background: #FFFFFF;
+    box-shadow: 0 14px 15px 0 rgba(59,132,239,0.17);
+    border-radius: 4px;
+    position: absolute;
+    top:44px;
+    width: 100%;
+    z-index: 9;
+    border-top:1px solid #E2DFDF;
+    .listSelect {
+      height: 44px;
+      width: 100%;
+      line-height: 44px;
+      text-align: center;
+      background-color: #ffffff;
+      .lineClass {
+        height: 1px;
+        background: #EFEFEF;
+        margin: 0 10px 0 10px;
+      }
+      .fontStyle{
+        font-family: PingFangSC-Regular;
+        font-size: 17px;
+        color: #646464;
+        letter-spacing: -0.41px;
+      }
+      .fontSp{
+        font-family: PingFangSC-Medium;
+        font-size: 16px;
+        color: #0775F5;
+        letter-spacing: -0.39px;
+      }
+      img{
+        float: left;
+        left: 30px;
+        position: relative;
+        top: 17px;
+      }
+    }
+  }
+.bar-subheader{
+  padding: 0;
+}
 }
