--- a/src/pages/school/schoolItemList/schoolItemList.scss
+++ b/src/pages/school/schoolItemList/schoolItemList.scss
@@ -1,3 +1,7 @@
-.schoolDetail{
-
+.schoolItemList{
+  .fontColor{
+    font-family: STHeitiSC-Light;
+    font-size: 14px;
+    color: #0775F5;
+  }
 }
