--- a/src/theme/app.core.scss
+++ b/src/theme/app.core.scss
@@ -16,6 +16,8 @@
 @import "../pages/myInfo/myInfo";
 
 @import "../pages/myClass/myClass";
+@import "../pages/myClass/modal/popovers.indexPage";
+
 
 @import "../pages/school/school";
 @import "../pages/school/schoolClass/schoolClass";
@@ -31,4 +33,4 @@
 @import "../pages/password/changePassword/changePassword";
 
 @import "../pages/timeSelect/timeSelect";
-
+@import "../pages/timeSelect/timeSelectData/timeSelectData";
