--- a/src/pages/timeSelect/timeSelectData/timeSelectData.scss
+++ b/src/pages/timeSelect/timeSelectData/timeSelectData.scss
@@ -53,4 +53,20 @@
   .rightGo{
 
   }
+  .imgClass{
+    margin-top: 90px;
+    text-align: center;
+    img{
+      height: 100px;
+      width: 100px;
+    }
+  }
+  .imgDesc{
+    font-family: PingFangSC-Light;
+    font-size: 17px;
+    color: #AAAAAA;
+    letter-spacing: -0.41px;
+    text-align: center;
+    margin-top: 20px;
+  }
 }
