--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -76,7 +76,7 @@ html,body{
     min-height: 0 !important;
     padding: 0 !important;
     height: 50px !important;
-    border-top: 1px solid #0775F5 !important;
+    border-top: 1px solid #dddddd !important;
     button {
       color: #0775F5 !important;
       border-left: 1px solid #e5e5e5;
