--- a/src/theme/app.core.scss
+++ b/src/theme/app.core.scss
@@ -14,6 +14,8 @@
 @import "../pages/indexPage/modal/popovers.indexPage";
 
 @import "../pages/myInfo/myInfo";
+@import "../pages/agentInfo/agentInfo";
+
 
 @import "../pages/myClass/myClass";
 @import "../pages/myClass/modal/popovers.indexPage";
