--- a/src/pages/school/school.scss
+++ b/src/pages/school/school.scss
@@ -1,6 +1,5 @@
 .school {
 
-
   .listDesc {
     height: 35px;
     line-height: 35px;
@@ -70,7 +69,7 @@
     color: #000000;
     letter-spacing: -0.36px;
     position: absolute;
-    border-top:1px solid #E2DFDF;
+    border-top: 1px solid #E2DFDF;
     .iconStyle {
       color: #C6C6C6;
     }
@@ -79,13 +78,13 @@
     max-height: 450px;
     overflow-y: scroll;
     background: #FFFFFF;
-    box-shadow: 0 14px 15px 0 rgba(59,132,239,0.17);
+    box-shadow: 0 14px 15px 0 rgba(59, 132, 239, 0.17);
     border-radius: 4px;
     position: absolute;
-    top:44px;
+    top: 44px;
     width: 100%;
     z-index: 9;
-    border-top:1px solid #E2DFDF;
+    border-top: 1px solid #E2DFDF;
     .listSelect {
       height: 44px;
       width: 100%;
@@ -97,19 +96,19 @@
         background: #EFEFEF;
         margin: 0 10px 0 10px;
       }
-      .fontStyle{
+      .fontStyle {
         font-family: PingFangSC-Regular;
         font-size: 17px;
         color: #646464;
         letter-spacing: -0.41px;
       }
-      .fontSp{
+      .fontSp {
         font-family: PingFangSC-Medium;
         font-size: 16px;
         color: #0775F5;
         letter-spacing: -0.39px;
       }
-      img{
+      img {
         float: left;
         left: 30px;
         position: relative;
@@ -117,7 +116,17 @@
       }
     }
   }
-.bar-subheader{
-  padding: 0;
-}
+  .bar-subheader {
+    padding: 0;
+  }
+  .spinnerClass{
+    position: relative;
+    top: -40px;
+  }
+  .spinnerClassSp{
+    position: relative;
+    top: -40px;
+    height: 44px;
+    line-height: 44px;
+  }
 }
