--- a/src/pages/indexPage/indexPage.scss
+++ b/src/pages/indexPage/indexPage.scss
@@ -168,6 +168,13 @@
     background: url(../assets/img/indexPage/icon_third.png) 0 center no-repeat;
     background-size: 24px 33px;
   }
+    .spanNum{
+      display: block;
+      height: 100%;
+      width: 100%;
+      text-align: center;
+      line-height: 50px;
+    }
 
   .global-container .common-rank .head {
     float: left;
