--- a/src/pages/myClass/classDetail/classDetail.scss
+++ b/src/pages/myClass/classDetail/classDetail.scss
@@ -123,6 +123,7 @@
   .the-content {
     /* Same as initial image height: */
     padding-top: 180px;
+    height: 100%;
   }
   .imgButton {
     margin-left: 12px;
