--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -78,3 +78,27 @@ $global-Line-bg: #E2DFDF  !default;
   text-align: center;
   white-space: normal;
 }
+/*modal*/
+.modalTab {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1001;
+  background: rgba(0, 0, 0, 0.5);
+  //visibility: hidden;
+  display: none;
+}
+.md-show-tab {
+  //visibility: visible;
+  display: block;
+}
+.modalTab .scroll {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow-y: scroll;
+}
