--- a/src/pages/indexPage/indexPage.scss
+++ b/src/pages/indexPage/indexPage.scss
@@ -201,6 +201,13 @@
     vertical-align: bottom;
     margin-left: 10px;
   }
+  .global-container .common-rank .person-info .count {
+    height: 22px;
+    font-size: 12px;
+    color: #888888;
+    vertical-align: bottom;
+    margin-left: 10px;
+  }
   .global-container .common-rank .person-info .bottom > span {
     color: #888888;
     height: 20px;
