--- a/src/pages/school/schoolClass/schoolClass.scss
+++ b/src/pages/school/schoolClass/schoolClass.scss
@@ -39,10 +39,14 @@
       letter-spacing: -0.41px;
       display: inline-block;
       width: 50%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
     .spanWidth {
       width: 25%;
       display: inline-block;
+      float: left;
     }
   }
 
@@ -71,6 +75,11 @@
       letter-spacing: 0;
       text-align: center;
       margin-top: 10px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      width: 85%;
+      display: block;
     }
     .schoolAdress {
       font-size: 13px;
