--- a/src/pages/indexPage/indexPage.scss
+++ b/src/pages/indexPage/indexPage.scss
@@ -89,6 +89,7 @@
     margin-bottom: 2px;
     height: 37px;
     line-height: 37px;
+    font-family: DIN-Regular;
   }
   .global-container .new-data-statistics .data-box .data-item .spe-info .data-type {
     font-size: 12px;
@@ -174,6 +175,7 @@
       width: 100%;
       text-align: center;
       line-height: 50px;
+      white-space: nowrap;
     }
 
   .global-container .common-rank .head {
