--- a/src/pages/school/schoolClass/schoolClass.scss
+++ b/src/pages/school/schoolClass/schoolClass.scss
@@ -78,7 +78,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
-      width: 85%;
+      //width: 85%;
       display: block;
     }
     .schoolAdress {
