--- a/src/theme/app.core.scss
+++ b/src/theme/app.core.scss
@@ -36,3 +36,14 @@
 
 @import "../pages/timeSelect/timeSelect";
 @import "../pages/timeSelect/timeSelectData/timeSelectData";
+
+@import "../pages/setting/setting";
+@import "../pages/setting/messageInfo/messsageList";
+@import "../pages/setting/messageInfo/messageDetail/messageDetail";
+@import "../pages/setting/userApplication/userApplicationList";
+@import "../pages/setting/userApplication/distribution/distribution";
+@import "../pages/setting/userApplication/exchange/exchange";
+@import "../pages/setting/userApplication/follow/follow";
+@import "../pages/setting/userApplication/operationLog/operationLog";
+@import "../pages/setting/userApplication/return/return";
+
