--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -1,93 +1,45 @@
-.indexPage{
-  .banner{
-    width: 100%;
-    height: 200px;
-    img{
-      width: 100%;
-      height: 200px;
-    }
+.setting {
+  .done {
+    text-decoration: line-through;
   }
-  .menu-list{
-    .menu-area {
-      width: 100%;
-      background-image: linear-gradient(0deg, transparent, transparent 50%, #f5f5f5 50%);
-      background-position: top;
-      background-size: 100% 1px;
-      background-repeat: no-repeat;
-      .menu-header{
-        height: 30px;
-        line-height: 30px;
-        padding-left:20px;
-      }
-      .menu-line {
-        height: 80px;
-        width: 100%;
-        text-align: center;
-        background-image: linear-gradient(90deg, #f5f5f5, #f5f5f5 50%, transparent 50%);
-        background-position: right;
-        background-size: 1px 100%;
-        background-repeat: no-repeat;
-        &.activated {
-          background: #f5f5f5;
-        }
-        .app-item {
-          height: 50px;
-          padding-top: 3px;
-          width: 25%;
-          float: left;
-          .app-item-content {
-            height: 40px;
-            width: 40px;
-            display: inline-block;
-            line-height: 40px;
-            position: relative;
-            background: none;
-            text-align: center;
-            margin-top: 5px;
-            .app-extra {
-              position: absolute;
-              top: -6px;
-              right: -12px;
-              width: 26px;
-              height: 16px;
-              line-height: 12px;
-              padding: 2px;
-              border-radius: 8px;
-              font-size: 10px;
-              background: #f3515b;
-              color: white;
-              text-align: center;
-            }
-            .app-extra-refresh {
-              position: absolute;
-              top: -6px;
-              right: -12px;
-              width: 24px;
-              height: 16px;
-              line-height: 16px;
-              border-radius: 8px;
-              background: #f3515b;
-              text-align: center;
-            }
-            .app-extra-refresh .spinner svg {
-              width: 14px;
-              height: 14px;
-              stroke: white;
-              fill: white;
-            }
-            img {
-              width: 40px;
-              vertical-align: middle;
-            }
-          }
-
-        }
-        .app-text {
-          margin-top: 5px;
-          text-align: center;
-          font-size: 12px;
-        }
-      }
-    }
+  .colStyle {
+    color: #0a9dc7;
+  }
+  /* 栅格grid */
+  .col-25 {
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .col-25 img {
+    height: 64px;
+    width: 64px;
+  }
+  .col-25 ul li img {
+    height: 64px;
+    width: 64px;
+    margin-top: 12px
+  }
+  .col-25 ul li p {
+    text-align: center;
+  }
+  .userStyle {
+    height: 64px;
+    width: 64px;
+    display: block;
+    line-height: 64px;
+    border-radius: 50%;
+    border: 1px solid lightgray;
+    text-align: center;
+  }
+  .emailStyle {
+    font-size: 30px;
+  }
+  .hongDian {
+    width: 24px;
+    position: relative;
+    top: -75px;
+    left: 45px;
   }
 }
