--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -42,4 +42,9 @@
     top: -75px;
     left: 45px;
   }
+  .bigTitle{
+    font-size: 17px;
+    color: #000000;
+    font-family: PingFangSC-Regular;
+  }
 }
