--- a/src/pages/setting/messageInfo/messageDetail/messageDetail.scss
+++ b/src/pages/setting/messageInfo/messageDetail/messageDetail.scss
@@ -1,3 +1,34 @@
 .messageDetail {
-
+  .bigTitle {
+    font-size: 17px;
+    color: #000000;
+    font-family: PingFangSC-Regular;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  .smallContent {
+    font-size: 15px;
+    color: #000000;
+    font-family: PingFangSC-Light;
+    word-wrap: break-word !important;
+    word-break: break-all !important;
+    line-height: 28px;
+  }
+  .smallTime {
+    font-size: 13px;
+    color: #888888;
+    vertical-align: bottom;
+    font-family: DIN-Regular !important;
+  }
+  .contentAll {
+    width: 100%;
+    background: white;
+    padding: 16px;
+  }
+  .contentAllRed{
+    width: 100%;
+    background: red;
+    padding: 16px;
+  }
 }
