--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -45,6 +45,6 @@
   .bigTitle{
     font-size: 17px;
     color: #000000;
-    font-family: PingFangSC-Regular;
+    font-family: PingFangSC-Light;
   }
 }
