--- a/src/pages/setting/messageInfo/messsageList.scss
+++ b/src/pages/setting/messageInfo/messsageList.scss
@@ -1,6 +1,11 @@
 .messageList {
   .urgentBackground {
-    background-color: red;
+    //background-color: red;
+    //color: red !important;
+    //border: 1px solid red;
+    .bigTitle{
+      color: red;
+    }
   }
   .bigTitle {
     font-size: 17px;
