--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -1,4 +1,18 @@
 .setting {
+  .userInfo {
+    margin-top: 5px;
+  }
+  .username {
+    font-weight: bold;
+    font-size: 20px
+  }
+  .position {
+    font-size: 14px
+  }
+  .companyName {
+    margin-top: 10px;
+    font-size: 15px
+  }
   .done {
     text-decoration: line-through;
   }
@@ -7,7 +21,7 @@
   }
   /* 栅格grid */
   .col-25 {
-    height: 80px;
+    //height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,10 +53,15 @@
   .hongDian {
     width: 24px;
     position: relative;
-    top: -75px;
+    top: -90px;
     left: 45px;
   }
-  .bigTitle{
+  .bigTitle {
+    font-size: 15px;
+    color: #000000;
+    font-family: PingFangSC-Light;
+  }
+  .bigTitleSp{
     font-size: 17px;
     color: #000000;
     font-family: PingFangSC-Light;
